# haskellbook-exercises

./: README.md  chapter-001.org  chapter-002.org  chapter-0024.org  chapter-003.org  chapter-004.org  chapter-005.org  chapter-006.org  chapter-007.org  chapter-008.org  chapter-009.org  chapter-010.org  chapter-011.org  chapter-012.org  chapter-013.org  chapter-014.org  chapter-015.org  chapter-016.org  chapter-017.org  chapter-018.org  chapter-019.org  chapter-020.org  chapter-021.org  chapter-022.org  chapter-023.org  chapter-024.org  chapter-025.org  chapter-026.org  chapter-027.org  chapter-028.org  chapter-029.org  chapter-13.org  chapter-30.org  chapter-31.org  drill.org  ob-haskell-common.org
chapter-002/: Hello.hs  Wax.hs
chapter-003/: BuildingFunctions.hs  Print.hs  Reverse.hs
chapter-004/: Abs.hs  GeetIfCool1.hs  GeetIfCool2.hs  GreetIfCool1.hs  GreetIfCool2.hs  Mood.hs  Palindrome.hs
chapter-005/: Arith3Broken.hs  SingFirst.hs  SingSecond.hs  print1.hs
chapter-006/: dayofweek.hs  identityeq.hs  trivial.hs
chapter-007/: RoundTrip.hs  RoundTripDispatch.hs  RoundTripPointFree.hs
chapter-008/: DivFromScratch.hs  Factorial.hs  Fibonacci.hs  MaybeDividedBy.hs  McCarthy91.hs  RecursiveMul.hs  SumsUpTo.hs  WordNumber.hs
chapter-009/: Cipher.hs  EnumFromTo.hs  PoemLines.hs
chapter-010/: Database.hs
chapter-011/: Cipher.hs  Phone.hs
chapter-013/: Cipher.hs  Palindrome.hs  Person.hs
chapter-013/hangman/: hangman.cabal
chapter-013/hangman/src/: Main.hs
chapter-013/hello/: hello.cabal  stack.yaml
chapter-013/hello-interactive/: hello.cabal
chapter-013/hello-interactive/src/: Hello.hs  Main.hs
chapter-013/hello/src/: Hello.hs
chapter-014/addition/: addition.cabal
chapter-014/addition/src/: Main.hs
chapter-014/morse-code/: morse-code.cabal
chapter-014/morse-code/src/: Main.hs  Morse.hs
chapter-014/morse-code/tests/: tests.hs
chapter-015/: Meetup.SemigroupsAndMonoids.hs
chapter-016/: Meetup.Functors.hs  ReplaceExperiment.hs
chapter-017/: Meetup.Applicatives.hs  ZipListMonoid.hs  ZipListMonoid2.hs
chapter-019/shorty/: Main.hs  Makefile  hie.yaml  shorty.cabal
chapter-024/: ActivityLog.example  ActivityLog.hs  DataINI.hs  Dot.hs  Dot2.hs  INI.hs  IPAddress4.hs  IPAddress6.hs  SemVer.hs
chapter-024/testcases/: switch.gv
chapter-026/: Counter.hs  Morra.hs
chapter-028/: BoxedVector.hs  UnboxedVector.hs
chapter-029/: INIMain.hs  VigenereMain.hs
chapter-029/conf/aaa/: foo.ini
chapter-029/conf/bbb/ccc/: baz.ini
chapter-31/fingerd/: LICENSE  Makefile  fingerd.cabal  hie.yaml  stack.yaml
chapter-31/fingerd/src/: Debug.hs  Fingerctl.hs  Fingerd.hs  Main.hs  User.hs
extra/: State.hs  Traversable.hs  XmlTree.hs
