name:                addition
version:             0.1.0.0
synopsis:            HSpec sandbox
description:         HSpec sandbox
homepage:            https://github.com/gabrielelana/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriele Lana
maintainer:          gabriele.lana@gmail.com
copyright:           2018 Gabriele Lana
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10

executable addition
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
