name:                morse-code
version:             0.1.0.0
synopsis:            Text to Morse Code Translator
description:         Text to Morse Code Translator
homepage:            https://github.com/gabrielelana/morse-code#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriele Lana
maintainer:          gabriele.lana@gmail.com
copyright:           2018 Gabriele Lana
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable morse-code
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , containers
                     , morse-code
  other-modules:       Morse

test-suite tests
  ghc-options:         -Wall -fwarn-tabs
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , containers
                     , morse-code
  default-language:    Haskell2010
