name:                fingerd
version:             0.1.0.0
synopsis:            Creative implementation of finger server
description:         &quot;Haskell Programming From First Principles&quot; final project (chapter 31)
homepage:            https://github.com/gabrielelana
license:             BSD3
license-file:        LICENSE
author:              Gabriele Lana
maintainer:          gabriele.lana@gmail.com
copyright:           Copyright (c) 2021 Gabriele Lana &lt;gabriele.lana@gmail.com&gt;
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Fingerd.hs
  other-modules:       User
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , parsec
                     , text

executable fingerctl
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Fingerctl.hs
  other-modules:       User
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , raw-strings-qq
                     , sqlite-simple
                     , text
